# hanstool

./: .gitignore  .gitmodules  .prospector.yaml  .travis.yml  LICENSE.txt  Makefile  README.md  TODO.md  flake.nix  ht  ht.bat  ht.sh  ht3.bat  ht3.cfg  ht3_cli.bat  ht3_win.bat  ht_gui  ht_gui.bat  htc.py  htc.sh  htw.bat  mpd.py  neo_vim.45.py  nvim.45.py  pytest.ini  run_tests.py  setup.cfg  setup.py  shell.nix  t32api.py  test.py  vlc.py
awesome_wm/: AWESOME.md  ht3.lua
client/: README.md  client.py  setup.py
docs/: ARGUMENTS.md  ARGUMENTS.rst  AWESOME.md  AWESOME.rst  CHECK.md  DEVELOPE.md  DEVELOPE.rst  ENV.md  FRONTENDS.md  FRONTENDS.rst  WINDOWS.md
extra/: mpc.py  mpd.py  nvim.45.py  vlc.py
extra_scripts/: neo_vim.45.py  vlc.py
ht3/: __main__.py  args.py  check.py  cli.py  client.py  cmd.py  command.py  complete.py  daemon.py  default_script.py  env.py  filter.py  gui.py  history.py  hook.py  hotkey.py  hotkeys.py  htd.py  keycodes.py  lib.py  main.py  processwatch.py  scripts.py  test_args.py  test_check.py  test_command.py  test_complete.py  test_daemon.py  test_env.py  test_env2.py  test_fake.py  test_history.py  test_hook.py  test_htd.py  test_integration.py  test_lib.py  test_processwatch.py  test_scripts.py  win32gui.py
ht3client/: __init__.py  __main__.py
scripts/: .gitignore  00-test.py  10-default.py  80-util.py  default.0.py  default.00.py  default.10.py  default.20.py  examples.50.py  mr.50.py  test.1.py  windows.10.py  windows.20.py
test/: inside.py  test_cmd.py  test_env.py  test_filter.py  test_integration.py  test_lib.py
(+102 files in other folders)
