[metadata]
name = ht3
version = 0.3
description = Shell like Python interface
license = GPLv2
author = Wonko
author_email = wonko@hanstool.org
url = https://github.com/wonkodv/hanstool

[options]
zip_safe = True
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
        ht = ht3.__main__
