[options]
zip_safe = True
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
        ht = ht3.__main__

[flake8]
max-line-length = 110

ignore =
    # Whitespace before :
    E203,
    # Line too long
    E501,
    # Linebreak before binary operator
    W503,

per-file-ignores =
    # 'X' may be undefined happens all the time with from Env import *
    ht3/default_scripts/*:F405,F403


exclude = .git, __pycache__
